# gitship

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  THIRD_PARTY_NOTICES.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml
BRANCH/: index.html
DEPLOYMENT/: index.html
QUICKSTART/: index.html
docs/: BRANCH.md  index.md
search/: search_index.json
src/gitship/: __init__.py  amend.py  branch.py  changelog_generator.py  check.py  checkgit.py  ci.py  cli.py  commit.py  config.py  deps.py  docbuilder.py  docs.py  fix.py  fixgit.py  gitignore.py  gitops.py  hunk_grouper_ast.py  hunk_merger.py  init.py  licenses.py  merge.py  merge_message.py  mkdocs_deploy.py  publish.py  pypi.py  release.py  repair.py  resolve_conflicts.py  review.py  stash.py  sync.py  tag.py  vscode_history.py
tests/: __init__.py  basic_test.py  test.py  test_basic.py  test_changelog.py  test_reviewgit.py
