[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "gitship"
version = "0.3.0"
description = "Interactive Git history management and commit inspection tools with comprehensive diff review"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "1minds3t", email = "1minds3t@proton.me"}
]
keywords = ["git", "version-control", "cli", "history", "revert", "commit-inspection", "diff", "review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "pyperclip",
    "requests",
    "tomli",
]

[project.optional-dependencies]
full = ["omnipkg"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/1minds3t/gitship"
Repository = "https://github.com/1minds3t/gitship"
Issues = "https://github.com/1minds3t/gitship/issues"

[project.scripts]
gitship = "gitship.cli:main"

[tool.setuptools]
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.txt"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]